2978 - checkbox not centered fix for table header

--- a/stencil-workspace/src/components/modus-table/modus-table.scss
+++ b/stencil-workspace/src/components/modus-table/modus-table.scss
@@ -147,6 +147,10 @@ table {
           padding: $rem-4px $rem-8px;
         }
 
+        &.row-checkbox > modus-checkbox {
+          justify-content: center;
+        }
+
         &.header-base {
           outline: -webkit-focus-ring-color auto 1px;
         }
